--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 
 
 test.doFirst {
-    jvmArgs "-javaagent:${configurations.agent.singleFile}"
+//    jvmArgs "-javaagent:${configurations.agent.singleFile}"
 }
 
 test {
