--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,12 @@ dependencies {
 
 
     compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.5.2'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version:  '3.5.2'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: '3.5.2'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-htmlunit-driver', version: '2.52.0'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-ie-driver', version:  '3.5.2'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-support', version:  '3.5.2'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version:  '3.5.2'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-remote-driver', version:  '3.5.2'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-ie-driver', version: '3.5.2'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.5.2'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.5.2'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-remote-driver', version: '3.5.2'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '3.5.2'
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     compile group: 'ru.yandex.qatools.allure', name: 'allure-java-annotations', version: '1.5.4'
@@ -51,6 +51,14 @@ dependencies {
     compile group: 'org.testng', name: 'testng', version: '6.11'
     compile group: 'org.json', name: 'json', version: '20170516'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-web
+    compile group: 'org.springframework', name: 'spring-web', version: '5.1.4.RELEASE'
+// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+// https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured
+    testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+
 
     cxf "org.apache.cxf:cxf-tools-wsdlto-core:3.1.10"
     cxf "org.apache.cxf:cxf-tools-wsdlto-frontend-jaxws:3.1.10"
