--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ configurations {
 dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
 
+    // https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
+
 
     compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.5.2'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: '3.5.2'
@@ -44,7 +47,8 @@ dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '3.5.2'
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     compile group: 'ru.yandex.qatools.allure', name: 'allure-java-annotations', version: '1.5.4'
-
+    compile group: 'ru.yandex.qatools.ashot', name: 'ashot', version: '1.5.4'
+    
     compile group: 'com.jcraft', name: 'jsch', version: '0.1.51'
     compile 'org.codehaus.groovy:groovy-all:2.4.10'
     compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.1.0.jre8'
@@ -75,7 +79,7 @@ dependencies {
 
 
 test.doFirst {
-//    jvmArgs "-javaagent:${configurations.agent.singleFile}"
+   jvmArgs "-javaagent:${configurations.agent.singleFile}"
 }
 
 test {
